Add responsiveness, a11y and service worker

--- a/restaurant.html
+++ b/restaurant.html
@@ -28,8 +28,7 @@
 
 		<!-- Beginning map -->
 		<section tabindex="-1" id="map-container">
-			<h2>Restaurant Location</h2>
-			<div id="map"></div>
+			<div id="map" role="application"></div>
 		</section>
 
 		<!-- Beginning restaurant -->
